fix most of problems with ZH4